<resources>
    <string name="app_name">Rides</string>
    <string name="get_vehicles">Get Vehicles</string>
    <string name="enter_number_of_vehicles">Enter number of vehicles</string>
    <string name="back_button">back button</string>
    <string name="vin">Vin</string>
    <string name="make_and_model">Make/Model</string>
    <string name="color">Color</string>
    <string name="type">Type</string>
    <string name="placeholder">---</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="wrong_number_error">Please enter a number between 1 and 100</string>
</resources>